p3/confs/app/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil
  template:
    metadata:
      labels:
        app: wil
    spec:
      containers:
      - name: wil
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
