p3/confs/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-app-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wil.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-app-service
            port:
              number: 8888
